# what-is-asolaria---how-do-we-get-reductions-in-everything

./: .gitattributes  .gitignore  100B-FREE-AGENT-RUN-RECTIFICATION-2026-06-21.md  100B-NEW-RUN-2026-06-16-PROOF.md  100B-RUN-VERIFIED-PROOF.md  ALGORITHMS-OF-ASOLARIA-2026-06-19.md  ALGORITHMS-OF-ASOLARIA-2026-06-19.md.sha256  ASOLARIA-ARCHAEOLOGY-AND-SIGNIFICANCE-CANON.md  ASOLARIA-CREATION-LINEAGE-AND-SUPERVISORS.md  ASOLARIA-DEVICE-PID-MAP.md  ASOLARIA-FABRIC-ROLE-CORRECTION-2026-06-16.md  ASOLARIA-LIVE-ENGINE-ARCHITECTURE.md  ASOLARIA-MAP-OF-MAPS-2026-06-19.md  ASOLARIA-MAP-OF-MAPS-2026-06-19.md.sha256  ASOLARIA-MAP-OF-MAPS-MODEL-CITIZEN-PRISM-2026-06-19.hbp  ASOLARIA-MAP-OF-MAPS-MODEL-CITIZEN-PRISM-2026-06-19.hbp.sha256  ASOLARIA-MAP-OF-MAPS-MODEL-CITIZEN-PRISM-2026-06-19.md  ASOLARIA-MIGRATION-MAP.md  ASOLARIA-PRIME-TOWERS-REBUILD-REPORT.md  ASOLARIA-TENSOR-COLLAPSE-EXCAVATION-2026-06-16.md  ASOLARIA-USB-EXFAT-WALK-2026-06-16.md  ASOLARIA-USB-FULL-SURVEY-2026-06-14.md  ASOLARIA-WSL-UBUNTU-LEADS-2026-06-16.md  BILATERAL-LEASE.hbp  CHAIN.md  FABRIC-FULL-SUITE-TEST-2026-06-16.md  LAYERED-PID-SUPERVISOR-CENSUS-2026-06-18.md  MAP.md  MULTI-EMITTER-SERVICE-MULTIPLICATION.md  OLD-COMPRESSION-AND-TENSOR-COLLAPSE-REVIEW-2026-06-16.md  OLD-COMPRESSION-GROWTH-CURVE-MEASURED-2026-06-16.md  README.md  RECALL-PORTAL-METRICS-2026-06-23.md  RICH-INDEX-LANGUAGE-GROWTH-CURVE-2026-06-16.md  SESSION-UPDATE-2026-06-22.md  SOTA-BENCH-AND-QUANT-FINDINGS-2026-06-23.md  SOTA-BENCH-AND-QUANT-FINDINGS-2026-06-23.md.sha256
kernels/asolaria-os-metal-kernel/: Cargo.toml  lib.rs  pid-mod.rs
(+295 files in other folders)
