[package]
name = "asolaria-kernel-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Asolaria Federation Remake · kernel core · no_std · BEHCS-1024 native"

[lib]
crate-type = ["rlib"]

[dependencies]
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
crossbeam-queue = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
test-vectors = []  # enable byte-parity test vectors vs JS minter reference
